sparrow-engine/sparrow-engine-cpu/NativeMethods.g.cs


        /// <summary>
        ///  Returns a pointer to a static, null-terminated UTF-8 string with the
        ///  sparrow-engine-cpu crate version (matches `[package].version` in
        ///  `sparrow-engine-cpu/Cargo.toml`). Caller MUST NOT free.
        ///
        ///  Phase D B-12: useful for installer / Studio Local / brew `test do` smoke
        ///  tests — a zero-arg, zero-allocation entry point that proves DLL load +
        ///  symbol resolution without spinning up an engine. Byte-for-byte mirror of
        ///  the GPU FFI surface (G5 acceptance gate enforces CPU/GPU symbol parity).
        ///
        ///  # Safety
        ///  Thread-safe. Returned pointer is valid for the lifetime of the process.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_version();


    }

    /// <summary>
    ///  Axis-aligned bounding box, normalized [0,1], xyxy format.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineBBox
    {
        public float x_min;
        public float y_min;
        public float x_max;
        public float y_max;
    }

    /// <summary>
    ///  Single detection result. `label` pointer valid until `sparrow_engine_detections_free()`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineDetection
    {
        public SparrowEngineBBox bbox;
        public byte* label;
        public uint label_id;
        public float confidence;
    }

    /// <summary>
    ///  Detection result set from a single `sparrow_engine_detect()` / `sparrow_engine_detect_raw()` call.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineDetections
    {
        public SparrowEngineDetection* data;
        public nuint len;
        public uint image_width;
        public uint image_height;
    }

    /// <summary>
    ///  Single classification prediction.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineClassification
    {
        public byte* label;
        public uint label_id;
        public float confidence;
    }

    /// <summary>
    ///  Classification result from a single `sparrow_engine_classify()` call.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineClassifyResult
    {
        public byte* label;
        public uint label_id;
        public float confidence;
        public SparrowEngineClassification* top_results;
        public nuint top_results_len;
        public uint image_width;
        public uint image_height;
        public float processing_time_ms;
    }

    /// <summary>
    ///  A pipeline detection: detection + optional classification.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEnginePipelineDetection
    {
        public SparrowEngineDetection detection;
        [MarshalAs(UnmanagedType.U1)] public bool has_classification;
        public SparrowEngineClassification classification;
    }

    /// <summary>
    ///  Pipeline result from `sparrow_engine_run_pipeline()`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEnginePipelineResult
    {
        public byte* pipeline_id;
        public SparrowEnginePipelineDetection* data;
        public nuint len;
        public uint image_width;
        public uint image_height;
        public float processing_time_ms;
    }

    /// <summary>
    ///  Detection inference options. Zero = use default.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineDetectOpts
    {
        public float confidence_threshold;
        public uint max_detections;
    }

    /// <summary>
    ///  Classification inference options. Zero = use default.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineClassifyOpts
    {
        public uint top_k;
    }

    /// <summary>
    ///  A single detected audio segment.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioSegment
    {
        public float start_time_s;
        public float end_time_s;
        public float confidence;
    }

    /// <summary>
    ///  Audio detection result from `sparrow_engine_detect_audio`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioResult
    {
        public SparrowEngineAudioSegment* data;
        public nuint len;
        public float duration_s;
        public uint sample_rate;
        public float processing_time_ms;
    }

    /// <summary>
    ///  V2 (Perch 2 + future multi-class classifiers): per-class entry for top-K output.
    ///  `label` is a borrowed pointer into the result's CString arena; valid until the
    ///  SparrowEngineAudioResult_v2 is freed via sparrow_engine_audio_result_v2_free.
    ///  `label` may be null when the model has no label for this index.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioClass
    {
        public uint class_idx;
        public byte* label;
        public float probability;
    }

    /// <summary>
    ///  V2 audio segment: same V1 fields plus a top-K classes array.
    ///  `classes` is a borrowed pointer into the result; valid for the lifetime of the result.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioSegment_v2
    {
        public float start_time_s;
        public float end_time_s;
        public float confidence;
        public SparrowEngineAudioClass* classes;
        public nuint classes_len;
    }

    /// <summary>
    ///  V2 audio detection result. Free with sparrow_engine_audio_result_v2_free.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioResult_v2
    {
        public SparrowEngineAudioSegment_v2* data;
        public nuint len;
        public float duration_s;
        public uint sample_rate;
        public float processing_time_ms;
    }

    /// <summary>
    ///  Audio detection options. Zero = use manifest default.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineAudioDetectOpts
    {
        public float confidence_threshold;
        public float segment_duration_s;
        public float segment_stride_s;
    }

    /// <summary>
    ///  A single image buffer for batch detection.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineImageBuffer
    {
        public byte* data;
        public nuint len;
    }

    /// <summary>
    ///  Day/night result. Returned by value (small struct).
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineDayNightResultC
    {
        /// <summary>
        ///  0 = success, -1 = error (check `sparrow_engine_last_error`).
        /// </summary>
        public int status;
        /// <summary>
        ///  1 = day, 0 = night. Undefined if status != 0.
        /// </summary>
        public int is_day;
        /// <summary>
        ///  Mean brightness [0,255]. -1.0 if status != 0.
        /// </summary>
        public float brightness;
    }

    /// <summary>
    ///  Model verification result. Freed by `sparrow_engine_verify_result_free`.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowEngineVerifyResultC
    {
        /// <summary>
        ///  0=Ok, 1=NoChecksum, 2=SizeMismatch, 3=ChecksumMismatch.
        ///  On error, `sparrow_engine_verify_model` returns null (call `sparrow_engine_last_error` for detail).
        /// </summary>
        public int status;
        /// <summary>
        ///  Detail message. Null if status=0 or status=1.
        /// </summary>
        public byte* detail;
    }



}
